bazel: document server inspection and comment out noisy warning in .bazelrc.user